--- a/app/assets/stylesheets/observations/identify/suggestions.css.scss
+++ b/app/assets/stylesheets/observations/identify/suggestions.css.scss
@@ -52,6 +52,7 @@
   #{$galleryHeightElements} {
     height: auto;
     max-height: 500px;
+    min-height: 300px;
   }
 
   .TaxonPhoto {
